# soundstone

./: .gitignore  .travis.yml  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  dewfile.json  dewfile.refs.json
example/: CMakeLists.txt
example/src/: Mixer.cpp  Mixer.hpp  SinewaveGenerator.cpp  SinewaveGenerator.hpp  SinewaveSampler.cpp  SinewaveSampler.hpp  SquareGenerator.cpp  SquareGenerator.hpp  SquareSampler.cpp  SquareSampler.hpp  example.cpp
include/soundstone/: AudioProcessor.hpp  AudioSystem.hpp  DependencyGraph.hpp  GameAudioSystemManager.hpp  Module.hpp  PoolParty.hpp  RealTimeAudioManager.hpp  RealTimeSoundSystemManager.hpp  RingBuffer.hpp  Sampler.hpp  SamplerWorker.hpp  SoundSystem.hpp  SystemAudio.hpp  SystemOutputModule.hpp  ThreadedDriver.hpp
src/: AudioProcessor.cpp  AudioSystem.cpp  DependencyGraph.cpp  PoolParty.cpp  RealTimeAudioManager.cpp  RealTimeSoundSystemManager.cpp  RingBuffer.cpp  SamplerWorker.cpp  SoundSystem.cpp  SystemAudio.cpp  SystemOutputModule.cpp  ThreadedDriver.cpp
test/: AudioProcessorTests.cpp  DependencyGraphTests.cpp  DumbSampler.cpp  DumbSampler.hpp  PoolPartyTest.cpp  RingBufferTests.cpp  SoundSystemTests.cpp
test/mocks/: MockSampler.hpp
test/util/: DumbSampler.cpp  DumbSampler.hpp
